Fixed italic text on iOS

--- a/src/components/CompanyCard/CompanyCard.scss
+++ b/src/components/CompanyCard/CompanyCard.scss
@@ -206,6 +206,7 @@
   &__name {
     display: block;
     font-family: variables.$font-italic;
+    font-style: italic;
     text-transform: uppercase;
     font-size: 16px;
     line-height: 1;
