--- a/src/components/NominationsAccordion/NominationsAccordion.scss
+++ b/src/components/NominationsAccordion/NominationsAccordion.scss
@@ -44,6 +44,7 @@
 
   &__title {
     font-family: variables.$font-italic;
+    font-style: italic;
     line-height: 1.2;
     text-transform: uppercase;
   }
