--- a/src/sections/AnnouncementSection/AnnouncementSection.scss
+++ b/src/sections/AnnouncementSection/AnnouncementSection.scss
@@ -54,6 +54,7 @@
     font-family: variables.$font-italic;
     font-size: 18px;
     text-align: center;
+    font-style: italic;
     text-transform: uppercase;
     margin-bottom: 40px;
 
